[FIX] Monospace font for alignment parameter. Increase no. rows for textarea

--- a/app/assets/styles/jobview.css
+++ b/app/assets/styles/jobview.css
@@ -57,7 +57,7 @@ body.is-reveal-open {
 }
 .parameter #alignment {
 
-    font-family: Monaco, Consolas, "Lucida Console", monospace;
+    font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
     margin: 0 0 0;
 }
 .parameter .alignmentFormat {
